RESOLVED FIXED71169
DOMURL should keep its own state rather than storing it on ScriptExecutionContext
https://bugs.webkit.org/show_bug.cgi?id=71169
Summary DOMURL should keep its own state rather than storing it on ScriptExecutionCon...
Adam Barth
Reported 2011-10-28 18:42:39 PDT
DOMURL should keep its own state rather than storing it on ScriptExecutionContext
Attachments
Patch (10.29 KB, patch)
2011-10-28 18:44 PDT, Adam Barth
no flags
Patch for landing (10.28 KB, patch)
2011-10-29 00:51 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2011-10-28 18:44:32 PDT
Eric Seidel (no email)
Comment 2 2011-10-28 21:41:24 PDT
Comment on attachment 112961 [details] Patch Makes sense to me.
WebKit Review Bot
Comment 3 2011-10-28 22:29:11 PDT
Comment on attachment 112961 [details] Patch Rejecting attachment 112961 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: :String&)': Source/WebCore/html/DOMURL.cpp:120: error: 'isMainThread' was not declared in this scope make: *** [out/Debug/obj.target/webcore_html/Source/WebCore/html/DOMURL.o] Error 1 make: *** Waiting for unfinished jobs.... Failed to run "['Tools/Scripts/build-webkit', '--debug', '--chromium', '--update-chromium']" exit_code: 2 ainThread' was not declared in this scope make: *** [out/Debug/obj.target/webcore_html/Source/WebCore/html/DOMURL.o] Error 1 make: *** Waiting for unfinished jobs.... Full output: http://queues.webkit.org/results/10242263
Adam Barth
Comment 4 2011-10-29 00:51:34 PDT
Created attachment 112967 [details] Patch for landing
WebKit Review Bot
Comment 5 2011-10-29 02:10:48 PDT
Comment on attachment 112967 [details] Patch for landing Clearing flags on attachment: 112967 Committed r98802: <http://trac.webkit.org/changeset/98802>
WebKit Review Bot
Comment 6 2011-10-29 02:10:52 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2011-10-30 22:28:23 PDT
Comment on attachment 112967 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=112967&action=review > Source/WebCore/html/DOMURL.cpp:66 > + for (HashSet<String>::iterator iter = m_publicStreamURLs.begin(); iter != publicStreamURLsEnd; ++iter) > + MediaStreamRegistry::registry().unregisterMediaStreamURL(KURL(ParsedURLString, *iter)); It's going to ASSERT(isMainThread()). Is DOMURL really main thread only (and why does it have NoStaticTables in IDL in that case)?
Adam Barth
Comment 8 2011-10-30 22:32:06 PDT
This patch doesn't change anything about how this code works. You probably want to file a new bug and CC the person who added the ASSERT.
Note You need to log in before you can comment on or make changes to this bug.