DOMURL should keep its own state rather than storing it on ScriptExecutionContext https://bugs.webkit.org/show_bug.cgi?id=71169

Reviewed by Eric Seidel.

This patch untwists this code.  I think this code was originally
twisted because these APIs moved onto DOMURL after they were first
implemented.

* dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::~ScriptExecutionContext):
* dom/ScriptExecutionContext.h:
* fileapi/FileWriter.h:
* html/DOMURL.cpp:
(WebCore::DOMURL::contextDestroyed):
(WebCore::DOMURL::createObjectURL):
(WebCore::DOMURL::revokeObjectURL):
* html/DOMURL.h:


Canonical link: https://commits.webkit.org/87416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98802 268f45cc-cd09-0410-ab3c-d52691b4dbfc