Source/WebCore/dom/ScriptExecutionContext.cpp
@@ -28,11 +28,8 @@
 #include "ScriptExecutionContext.h"
 
 #include "ActiveDOMObject.h"
-#include "Blob.h"
-#include "BlobURL.h"
 #include "ContentSecurityPolicy.h"
 #include "DOMTimer.h"
-#include "DOMURL.h"
 #include "Database.h"
 #include "DatabaseTask.h"
 #include "DatabaseThread.h"
@@ -44,7 +41,6 @@
 #include "ScriptCallStack.h"
 #include "SecurityOrigin.h"
 #include "Settings.h"
-#include "ThreadableBlobRegistry.h"
 #include "WorkerContext.h"
 #include "WorkerThread.h"
 #include <wtf/MainThread.h>
@@ -52,12 +48,8 @@
 #include <wtf/Vector.h>
 
 #if USE(JSC)
+// FIXME: This is a layering violation.
 #include "JSDOMWindow.h"
-#endif
-
-#if ENABLE(MEDIA_STREAM)
-#include "MediaStream.h"
-#include "MediaStreamRegistry.h"
 #endif
 
 namespace WebCore {
@@ -128,18 +120,6 @@ ScriptExecutionContext::~ScriptExecutionContext()
         m_fileThread->stop();
         m_fileThread = 0;
     }
-#endif
-
-#if ENABLE(BLOB)
-    HashSet<String>::iterator publicBlobURLsEnd = m_publicBlobURLs.end();
-    for (HashSet<String>::iterator iter = m_publicBlobURLs.begin(); iter != publicBlobURLsEnd; ++iter)
-        ThreadableBlobRegistry::unregisterBlobURL(KURL(ParsedURLString, *iter));
-#endif
-
-#if ENABLE(MEDIA_STREAM)
-    HashSet<String>::iterator publicStreamURLsEnd = m_publicStreamURLs.end();
-    for (HashSet<String>::iterator iter = m_publicStreamURLs.begin(); iter != publicStreamURLsEnd; ++iter)
-        MediaStreamRegistry::registry().unregisterMediaStreamURL(KURL(ParsedURLString, *iter));
 #endif
 }
 
@@ -386,54 +366,6 @@ DOMTimer* ScriptExecutionContext::findTimeout(int timeoutId)
 {
     return m_timeouts.get(timeoutId);
 }
-
-#if ENABLE(BLOB)
-
-#if ENABLE(MEDIA_STREAM)
-KURL ScriptExecutionContext::createPublicBlobURL(MediaStream* stream)
-{
-    if (!stream)
-        return KURL();
-
-    KURL publicURL = BlobURL::createPublicURL(securityOrigin());
-
-    // Since WebWorkers cannot obtain Stream objects, we should be on the main thread.
-    ASSERT(isMainThread());
-    MediaStreamRegistry::registry().registerMediaStreamURL(publicURL, stream);
-    m_publicStreamURLs.add(publicURL.string());
-    return publicURL;
-}
-#endif // ENABLE(MEDIA_STREAM)
-
-KURL ScriptExecutionContext::createPublicBlobURL(Blob* blob)
-{
-    if (!blob)
-        return KURL();
-    KURL publicURL = BlobURL::createPublicURL(securityOrigin());
-    if (publicURL.isEmpty())
-        return KURL();
-    ThreadableBlobRegistry::registerBlobURL(publicURL, blob->url());
-    m_publicBlobURLs.add(publicURL.string());
-    return publicURL;
-}
-
-void ScriptExecutionContext::revokePublicBlobURL(const KURL& url)
-{
-    if (m_publicBlobURLs.contains(url.string())) {
-        ThreadableBlobRegistry::unregisterBlobURL(url);
-        m_publicBlobURLs.remove(url.string());
-    }
-#if ENABLE(MEDIA_STREAM)
-    if (m_publicStreamURLs.contains(url.string())) {
-        // FIXME: make sure of this assertion below. Raise a spec question if required.
-        // Since WebWorkers cannot obtain Stream objects, we should be on the main thread.
-        ASSERT(isMainThread());
-        MediaStreamRegistry::registry().unregisterMediaStreamURL(url);
-        m_publicStreamURLs.remove(url.string());
-    }
-#endif // ENABLE(MEDIA_STREAM)
-}
-#endif // ENABLE(BLOB)
 
 #if ENABLE(BLOB) || ENABLE(FILE_SYSTEM)
 FileThread* ScriptExecutionContext::fileThread()
